# DarkEZKL

./: .dockerignore  .gitignore  BENCHMARKS.md  Dockerfile  PROBABILISTIC.md  README.md  SRS_RECONSTRUCTION.md  bench_vit.py  benchmark.py  docker-compose.yml  plot_results.py  setup-gpu.sh  test_bench.py
ezkl/: Cargo.toml  README.md  pyproject.toml
ezkl/benches/: pairwise_pow.rs
ezkl/examples/onnx/smallworm/: Readme.md
ezkl/ezkl/: __init__.py
ezkl/src/: commands.rs  commands_part1.rs  commands_part2.rs  eth.rs  execute.rs  execute_part1.rs  execute_part2.rs  lib.rs
ezkl/src/bindings/: python.rs
ezkl/src/circuit/: tests.rs  tests_part1.rs  tests_part2.rs
ezkl/src/circuit/ops/: chip.rs  mod.rs  poly.rs  probabilistic.rs  region.rs
ezkl/src/circuit/ops/chip/einsum/: analysis.rs  freivalds.rs  layouts.rs  mod.rs
ezkl/src/graph/: circuit.rs  config.rs  errors.rs  input.rs  mod.rs  model.rs  node.rs  utilities.rs  vars.rs  witness.rs
ezkl/src/graph/config/: tests.rs
ezkl/src/pfsys/: mod.rs
ezkl/src/tensor/: val.rs
ezkl/tests/: integration_tests.rs  probabilistic.rs
ezkl_bench/: bench.py  bench_model.py  bench_runner.py  cli.py  models.py  onnx_precision.py  onnx_sanitize.py  onnx_splitter.py  plotting.py  splitter.py  srs_utils.py  timm_weights.py  utils.py  vision_adapter_plotting.py  vision_adapters.py  worker.py
paper/: refs.bib  sample-sigconf-authordraft.tex
results/: bench_metrics.json  benchmark_partial.json  benchmark_suite.json
scripts/: plot_vision_adapter_figures.py  plot_zklora_paper_figures.py  reconstruct_srs_kzg26.sh  (+3 more)
