[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Build a real CPython extension (pyo3) so the produced .so exports a PyInit_* symbol.
bindings = "pyo3"

# Build the extension as module `ezkl` (i.e. `import ezkl`).
# (If maturin decides to wrap it as a package, our Dockerfile import check will still succeed.)
module-name = "ezkl"

# Ensure the Rust code with #[pymodule] is compiled in, and force the extension-module linkage.
# (Enabling pyo3/extension-module here provides an extra safety net.)
features = ["python-bindings", "pyo3/extension-module"]
no-default-features = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -p pytester --strict-markers"
testpaths = [
    "tests/python/*_tests.py",
]
asyncio_mode = "auto"

[project]
name = "ezkl"
version = "0.0.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
